Updated CVs to GCP R3 and Lining numbers

--- a/cv_en.tex
+++ b/cv_en.tex
@@ -6,7 +6,8 @@
 
 \setromanfont[BoldFont="Calluna Sans Semibold",
 ItalicFont="Calluna Sans Italic",
-BoldItalicFont="Calluna Sans Semibold Italic"]{CallunaSansRegular.otf}
+BoldItalicFont="Calluna Sans Semibold Italic",
+Numbers=Lining]{"Calluna Sans Regular"}
 \newfontface\lightsc{"Calluna Sans Light"}[Letters=SmallCaps]
 
 % \setromanfont[BoldFont=CallunaSansSemiBold.otf,
