--- a/short_cv_en.tex
+++ b/short_cv_en.tex
@@ -6,7 +6,8 @@
 
 \setromanfont[BoldFont="Calluna Sans Semibold",
 ItalicFont="Calluna Sans Italic",
-BoldItalicFont="Calluna Sans Semibold Italic"]{CallunaSansRegular.otf}
+BoldItalicFont="Calluna Sans Semibold Italic",
+Numbers=Lining]{CallunaSansRegular.otf}
 \newfontface\lightsc{"Calluna Sans Light"}[Letters=SmallCaps]
 %\setmonofont[Scale=MatchLowercase]{inconsolatalgc.ttf}
 %\setmonofont[Scale=MatchLowercase]{TrispaceCondensed-Light.otf}
