--- a/cv_en.tex
+++ b/cv_en.tex
@@ -67,9 +67,21 @@ Numbers=Lining]{"Calluna Sans Regular"}
 \def\endbibsection{\oldendbibsection\vspace{-.6\baselineskip}}
 \makeatother
 
-\usepackage{fancyhdr,lastpage}
+\usepackage{color,hyperref}
+\definecolor{darkblue}{rgb}{0.0,0.0,0.3}
+\hypersetup{colorlinks,breaklinks,
+            linkcolor=darkblue,urlcolor=darkblue,
+            anchorcolor=darkblue,citecolor=darkblue}
+
+\usepackage{fancyhdr}
+\usepackage{lastpage}
+\usepackage{bookmark}
+
+
 \pagestyle{fancy}
+
 %\pagestyle{empty}      % Uncomment this to get rid of page numbers
+
 \fancyhf{}\renewcommand{\headrulewidth}{0pt}
 \fancyfootoffset{\marginparsep+\marginparwidth}
 \setlength{\footskip}{20pt}
@@ -78,15 +90,12 @@ Numbers=Lining]{"Calluna Sans Regular"}
           {0.5\textwidth+0.5\marginparsep+0.5\marginparwidth-2in}
 \lfoot{\hspace{\footpageshift}%
        \parbox{4in}{\, \hfill %
-                    \arabic{page} of \protect\pageref*{LastPage} % +LP
-%                    \arabic{page}                               % -LP
-                    \hfill \,}}
+%                   \arabic{page} of \protect\directlua{tex.print(tex.count["page"])}
+%                     \arabic{page} of \pageref*{LastPage} % +LP
+                    \arabic{page}                               % -LP
+%                   \arabic{page} of \totalpages % +LP
+\hfill \,}}
 
-\usepackage{color,hyperref}
-\definecolor{darkblue}{rgb}{0.0,0.0,0.3}
-\hypersetup{colorlinks,breaklinks,
-            linkcolor=darkblue,urlcolor=darkblue,
-            anchorcolor=darkblue,citecolor=darkblue}
 
 \renewcommand{\section}[1]{\pagebreak[3]%
     \vspace{1.3\baselineskip}%
@@ -696,7 +705,7 @@ Advanced Lung Squamous-Cell Carcinoma: The Randomized SQUINT Trial.
 
 %Il sottoscritto ai sensi e per gli effetti degli articoli 46 e 47 e consapevole delle sanzioni penali previste dall’articolo 76 del D.P.R. 28 dicembre 2000, n. 445 nelle ipotesi di falsità in atti e dichiarazioni mendaci, dichiara che le informazioni riportate nel presente curriculum vitae, redatto in formato europeo, corrispondono a verità.
 \end{minipage}}
- 
+
 % \vspace{0.2cm}
 
 % \vfill
@@ -716,5 +725,3 @@ Advanced Lung Squamous-Cell Carcinoma: The Randomized SQUINT Trial.
 % \halfblankline
 
 \end{document}
-
-https://it.overleaf.com/project/60a0e23419a1c46482ae5165
